--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "husky"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -28,6 +29,8 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "7.28.0",
     "eslint-plugin-react-hooks": "4.3.0",
+    "husky": "^9.0.6",
+    "lint-staged": "^15.2.0",
     "prettier": "3.2.4",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
