--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "husky": "^9.0.6",
     "jsdom": "^24.0.0",
     "lint-staged": "^15.2.0",
+    "msw": "^2.2.2",
     "postcss": "^8.4.33",
     "prettier": "3.2.4",
     "tailwindcss": "^3.4.1",
